--- a/style.css
+++ b/style.css
@@ -1,153 +1,157 @@
 /* CSS Document */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
 }
 
 body {
-    min-height: 100vh;
-    background-color: #FFF;
+  min-height: 100vh;
+  background-color: #fff;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 1.3rem 10%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 1.3rem 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
 }
 
 header::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #FFD500;
-    z-index: -1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffd500;
+  z-index: -1;
 }
 
 header::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
-    transition: .5s;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(255, 255, 255, 0.4),
+    transparent
+  );
+  transition: 0.5s;
 }
 
 header:hover::after {
-    left: 100%;
+  left: 100%;
 }
 
 .logo {
-    font-size: 2rem;
-    color: #E3000B;
-    text-decoration: none;
-    font-weight: 700;
-    font-style: italic;
+  font-size: 2rem;
+  color: #e3000b;
+  text-decoration: none;
+  font-weight: 700;
+  font-style: italic;
 }
 
 nav a {
-    font-size: 1.15rem;
-    color: #000;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: 500;
-    margin-left: 2.5rem;
+  font-size: 1.15rem;
+  color: #000;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin-left: 2.5rem;
 }
 
 nav a:hover {
-    color: #FFF;
+  color: #fff;
 }
 
 #check-menu {
-    display: none;
+  display: none;
 }
 
 .icons {
-    position: absolute;
-    right: 5%;
-    font-size: 2.6rem;
-    color: #000;
-    cursor: pointer;
-    display: none;
+  position: absolute;
+  right: 5%;
+  font-size: 2.6rem;
+  color: #000;
+  cursor: pointer;
+  display: none;
 }
 
 /* BREAKPOINTS */
 @media (max-width: 1002px) {
-    header {
-        padding: 1.3rem 5%;
-    }
+  header {
+    padding: 1.3rem 5%;
+  }
 }
 
 @media (max-width: 892px) {
-    nav a {
-        margin-left: 2rem;    
-    }
+  nav a {
+    margin-left: 2rem;
+  }
 }
 
-
 @media (max-width: 837px) {
-    .icons {
-        display: inline-flex;
-    }
+  .icons {
+    display: inline-flex;
+  }
 
-    #check-menu:checked~.icons #menu-icon {
-        display: none;
-    }
+  #check-menu:checked ~ .icons #menu-icon {
+    display: none;
+  }
 
-    .icons #close-icon {
-        display: none;
-    }
+  .icons #close-icon {
+    display: none;
+  }
 
-    #check-menu:checked~.icons #close-icon {
-        display: block;
-    }
+  #check-menu:checked ~ .icons #close-icon {
+    display: block;
+  }
 
-    nav {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        height: 0;
-        background-color: #FFD500;
-        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .1);
-        overflow: hidden;
-        transition: 0.3s ease;
-    }
+  nav {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #ffd500;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: 0.3s ease;
+  }
 
-    #check-menu:checked~nav {
-        height: 18.7rem;
-    }
+  #check-menu:checked ~ nav {
+    height: 18.7rem;
+  }
 
-    nav a {
-        display: block;
-        font-size: 1.1rem;
-        margin: 1.5rem 0;
-        text-align: center;
-        transform: translateY(-50px);
-        opacity: 0;
-        transition: 0.3s ease;
-    }
+  nav a {
+    display: block;
+    font-size: 1.1rem;
+    margin: 1.5rem 0;
+    text-align: center;
+    transform: translateY(-50px);
+    opacity: 0;
+    transition: 0.3s ease;
+  }
 
-    nav a:hover {
-        transition: none;
-    }
+  nav a:hover {
+    transition: none;
+  }
 
-    #check-menu:checked~nav a {
-        transform: translateY(0);
-        opacity: 1;
-        transition-delay: calc(.15s * var(--i));
-    }
+  #check-menu:checked ~ nav a {
+    transform: translateY(0);
+    opacity: 1;
+    transition-delay: calc(0.15s * var(--i));
+  }
 }
