--- a/style.css
+++ b/style.css
@@ -17,141 +17,129 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 1.3rem 10%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-}
-
-header::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   background-color: #ffd500;
-  z-index: -1;
-}
-
-header::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-    90deg,
-    transparent,
-    rgba(255, 255, 255, 0.4),
-    transparent
-  );
-  transition: 0.5s;
-}
-
-header:hover::after {
-  left: 100%;
 }
 
 .logo {
-  font-size: 2rem;
+  font-size: 30px;
   color: #e3000b;
   text-decoration: none;
   font-weight: 700;
   font-style: italic;
 }
 
-nav a {
-  font-size: 1.15rem;
-  color: #000;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: 500;
-  margin-left: 2.5rem;
+nav {
+  width: 100%;
+  overflow: auto;
 }
 
-nav a:hover {
+nav ul {
+  list-style: none;
+  line-height: 70px;
+}
+
+nav ul li {
+  float: left;
+}
+
+nav ul li a {
+  padding: 0px 20px;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  font-size: 15px;
+  /* min-width: 100px; */
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #000;
+}
+
+.nav-item:hover {
+  background-color: #6666ff;
   color: #fff;
 }
 
-#check-menu {
+.nav-item.active {
+  background-color: orange;
+}
+
+#toggle-nav {
+  color: #fff;
+  text-decoration: none;
   display: none;
 }
 
-.icons {
-  position: absolute;
-  right: 5%;
-  font-size: 2.6rem;
+#social-media {
+  float: right;
+  margin-right: 100px;
+  line-height: 70px;
+}
+
+#social-media a {
+  max-width: 50px;
+  text-align: center;
+}
+
+#social-media a i {
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  background-color: #fff;
   color: #000;
-  cursor: pointer;
-  display: none;
+  border-radius: 50%;
+  margin: 5px;
+}
+
+#social-media a i:hover {
+  background-color: #6666ff;
+  color: #fff;
 }
 
 /* BREAKPOINTS */
-@media (max-width: 1002px) {
-  header {
-    padding: 1.3rem 5%;
-  }
-}
-
-@media (max-width: 892px) {
-  nav a {
-    margin-left: 2rem;
-  }
-}
-
-@media (max-width: 837px) {
-  .icons {
-    display: inline-flex;
-  }
-
-  #check-menu:checked ~ .icons #menu-icon {
-    display: none;
-  }
-
-  .icons #close-icon {
-    display: none;
-  }
-
-  #check-menu:checked ~ .icons #close-icon {
-    display: block;
-  }
-
+@media (max-width: 800px) {
   nav {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 0;
-    background-color: #ffd500;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    transition: 0.3s ease;
   }
 
-  #check-menu:checked ~ nav {
-    height: 18.7rem;
-  }
-
-  nav a {
-    display: block;
-    font-size: 1.1rem;
-    margin: 1.5rem 0;
+  #toggle-nav {
+    font-size: 40px;
     text-align: center;
-    transform: translateY(-50px);
-    opacity: 0;
-    transition: 0.3s ease;
+    font-weight: bold;
+    padding: 10px 0px;
+    background-color: #6666ff;
+    width: 100%;
+    display: block;
   }
 
-  nav a:hover {
-    transition: none;
+  nav ul li a {
+    width: 100%;
   }
 
-  #check-menu:checked ~ nav a {
-    transform: translateY(0);
-    opacity: 1;
-    transition-delay: calc(0.15s * var(--i));
+  nav ul li {
+    float: none;
+    width: 100%;
+    display: none;
+  }
+
+  #social-media {
+    width: 100%;
+    text-align: center;
+    border-top: 1px solid #fff;
+    float: none;
+  }
+}
+
+@media (min-width: 850px) {
+  nav {
+    overflow: auto;
+  }
+
+  nav ul li {
+    display: block !important;
   }
 }
