--- a/style.css
+++ b/style.css
@@ -140,23 +140,17 @@ main {
   margin-bottom: 8px;
 }
 
-#info-text p {
+#info-text p,
+#buyback-info p,
+#FAQ-answers p {
   margin-bottom: 20px;
   font-size: 16px;
   line-height: 1.5rem;
 }
 
-#info-text a {
+#info-text a,
+#buyback-info a {
   color: #000;
-}
-
-#info-text ul {
-  margin-left: 20px;
-  margin-bottom: 20px;
-}
-
-#info-text li {
-  margin-bottom: 8px;
 }
 
 #info-text .shop-link {
@@ -193,11 +187,39 @@ main {
   gap: 0px 30px;
 }
 
+#services {
+  text-align: left;
+}
+
+#info-text i,
+#buyback-info i,
+#FAQ-answers i {
+  font-size: 20px;
+  margin-right: 5px;
+}
+
+#services p {
+  margin-bottom: 10px;
+}
+
+#contact-info p {
+  margin: 10px;
+}
+
+#contact-info {
+  margin-bottom: 30px;
+  text-align: left;
+}
+
+#postal-code {
+  margin-left: 30px;
+}
+
 #courier-logos {
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
-  margin-bottom: 20px;
+  margin: 20px 0px;
 }
 
 #courier-logos img {
@@ -217,6 +239,50 @@ main {
 #map {
   width: 100%;
   height: 100%;
+}
+
+#buyback {
+  display: flex;
+  flex-wrap: wrap;
+  /* gap: 30px; */
+  padding: 0px 30px;
+  margin-bottom: 70px;
+}
+
+#buyback-info {
+  flex: 1;
+  min-width: 300px;
+  background: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
+}
+
+#buyback-info h2,
+#FAQ-answers h2 {
+  margin-bottom: 20px;
+}
+
+#buyback-info h3,
+#FAQ-answers h3 {
+  margin-bottom: 20px;
+}
+
+#FAQ {
+  display: flex;
+  flex-wrap: wrap;
+  /* gap: 30px; */
+  padding: 0px 30px;
+  margin-bottom: 70px;
+}
+
+#FAQ-answers {
+  flex: 1;
+  min-width: 300px;
+  background: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
 }
 
 footer {
@@ -241,7 +307,12 @@ footer a {
   color: #fff;
 }
 
-footer,
+footer i {
+  font-size: 20px;
+  margin-right: 5px;
+}
+
+footer .logo,
 #about .logo {
   cursor: default;
 }
@@ -287,13 +358,14 @@ footer,
     float: none;
   }
 
-  #about {
+  #about,
+  #buyback,
+  #FAQ {
     padding: 0 15px;
   }
 
   #banner {
     justify-content: center;
-    /* text-align: center; */
   }
 
   #lego-logo {
@@ -320,6 +392,12 @@ footer,
 
   #info-text {
     order: 1;
+    justify-content: center;
+    text-align: center;
+  }
+
+  #info-text .logo {
+    justify-content: center;
   }
 
   footer {
